style.css
/* -------  General Styles ------- */

body {
    font-family: "Lato", sans-serif;
    color: #6b1a22;
}

h2 {
    font-size: 26px;
    font-weight: 400;
    margin: 0 10px 15px 10px;
    text-align: center;
}

h3 {
    font-size: 18px;
    font-weight: 500;
}

p {
    line-height: 1.5em;
    margin: 0;
}

section {
    padding: 20px;
}

section.alternate-background {
    background-color: #a35766;
    color: #ecdbc9;
}

main img {
    width: 100px;
}


/* ---  Groups & Items --- */

.group {
    display: flex;
    flex-direction: column;
}

.item {
    flex: 1;
    margin: 10px;
}

.item-double {
    flex: 2;
}


/* -------  Navigation ------- */

header {
    display: flex;
    flex-direction: column;
    background-color: #83092e;
    padding: 20px 20px 0 20px;
    text-align: center;
}

.logo {
    font-family: "Tangerine", cursive;
    font-size: 72px;
    color: #ecdbc9;
}

header nav ul {
    display: flex;
    justify-content: center;
}

header nav ul:last-child {
    margin-right: 0px;
}

header nav ul li {
    list-style-type: none;
}

header nav ul li a {
    color: #ecdbc9;
    text-decoration: none;
    padding: 0 20px 0 0;
}

header nav ul li a:hover {
    color: #bdbdbd;
    text-decoration: none;
}


/* -------  Join Form ------- */

form {
    border: 2px solid #6b1a22;
    padding: 10px;
}

form label {
    font-weight: bold;
}

form select,
form input {
    margin-bottom: 20px;
    width: 180px;
}

form button {
    background-color: #83092e;
    border: none;
    color: #fff;
    font-size: 24px;
    padding: 15px;
    width: 100%;
}

.space {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

#join img {
    width: 100%;
    padding-bottom: 14px;
}


/*About*/

.aboutPic {
    width: 100%;
}


/*Download Page*/

.download-image {
    width: 100%;
}

#download h2 {
    font-weight: bold;
}


/*---- Blog -----*/

#blog img {
    width: 100%;
}


/* -------  Footer ------- */

footer {
    background-color: #83092e;
}

footer p {
    color: #fff;
    text-align: center;
    padding: 20px;
}


/* -------  Media Query ------- */

@media all and (min-width: 480px) {
    .horicenter {
        margin: auto;
        width: 50%;
        padding: 10px;
    }
    /* ---------Nav---------- */
    section,
    header {
        flex-direction: row;
        justify-content: space-between;
        padding-bottom: 14px;
    }
    .logo {
        font-size: 48px;
    }
    #join {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
    }
    #join img {
        width: 60%;
    }
    #download {
        flex-direction: row;
    }
    .position {
        align-self: center;
    }
    #aboutPage {
        flex-direction: row;
    }
    .aboutPara {
        flex: 2;
        align-self: center;
    }
    /*---- Blog ----*/
    #bg1,
    #bg2 {
        flex-direction: row;
    }
}

